--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ url: "https://npothu.github.io"
 github:
   username: npothu # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+#  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
