--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ defaults:
   - scope:
       path: _drafts
     values:
-      comments: true
+      comments: false
   - scope:
       path: ""
       type: tabs # see `site.collections`
