--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ timezone: America/New_York
 title: Nathan Pothuganti # the main title
 
 tagline: Aspring engineer 
-"Stay Hungry, Stay Foolish - Steve Jobs" # it will display as the sub-title
+> Stay Hungry, Stay Foolish 
+- Steve Jobs # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Nathan Pothuganti's Personal Site
