--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: America/New_York
 
 title: Nathan Pothuganti # the main title
 
-tagline: Aspring engineer # it will display as the sub-title
+tagline: Personal Website # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Nathan Pothuganti's Personal Site
